--- a/src/Leagueoflegends.Support/Themes/Units/RiotNewsButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotNewsButton.xaml
@@ -44,8 +44,8 @@
                 <Image
                   x:Name="Image"
                   Source="{TemplateBinding ImageSource}"
-                  Stretch="Fill"
                   Height="{TemplateBinding ImageHeight}"
+                  Stretch="UniformToFill"
                   Opacity="0.9"/>
               </Border>
             </Border>
