--- a/src/Leagueoflegends.Support/Themes/Units/RiotChampSkinSummary.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotChampSkinSummary.xaml
@@ -18,6 +18,29 @@
     <GradientStop Color="#00000000" Offset="1.0" />
   </LinearGradientBrush>
 
+  <Style x:Key="OverlayBorderStyle" TargetType="Border">
+    <Setter Property="Background" Value="{StaticResource OverlayGradient}"/>
+    <Setter Property="Width" Value="100"/>
+    <Setter Property="Height" Value="50"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="CountStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#CBB785"/>
+    <Setter Property="FontSize" Value="40"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="Margin" Value="0,15,0,0"/>
+  </Style>
+
+  <Style x:Key="SkinTextStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="FontSize" Value="11"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="Margin" Value="0,0,0,10"/>
+  </Style>
+
   <Style TargetType="ContentControl" x:Key="CountContentStyle">
     <Setter Property="HorizontalAlignment" Value="Center"/>
     <Setter Property="VerticalAlignment" Value="Top"/>
@@ -26,25 +49,10 @@
         <ControlTemplate TargetType="ContentControl">
           <StackPanel>
             <Grid>
-              <TextBlock 
-              Text="{Binding OwnedSkinsCount}" 
-              Foreground="#CBB785"
-              FontSize="40"
-              FontWeight="Bold"
-              HorizontalAlignment="Center"
-              Margin="0,15,0,0"/>
-              <Border
-              Background="{StaticResource OverlayGradient}"
-              Width="100" Height="50"
-              HorizontalAlignment="Center"
-              VerticalAlignment="Center"/>
+              <TextBlock Style="{StaticResource CountStyle}" Text="{Binding OwnedSkinsCount}"/>
+              <Border Style="{StaticResource OverlayBorderStyle}"/>
             </Grid>
-            <TextBlock
-            Text="Owned Skins"
-            Foreground="#A09B8C"
-            FontSize="11"
-            HorizontalAlignment="Center"
-            Margin="0,0,0,10"/>
+            <TextBlock Style="{StaticResource SkinTextStyle}" Text="Owned Skins"/>
           </StackPanel>
         </ControlTemplate>
       </Setter.Value>
@@ -125,6 +133,7 @@
   </Style>
 
   <Style TargetType="Grid" x:Key="ContentGridStyle">
+    <Setter Property="Grid.Row" Value="1"/>
     <Setter Property="Margin" Value="8,35,8,0"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
     <Setter Property="VerticalAlignment" Value="Center"/>
@@ -142,7 +151,7 @@
                   <RowDefinition Height="Auto"/>
                   <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Style="{StaticResource ContentGridStyle}">
+                <Grid Style="{StaticResource ContentGridStyle}">
                   <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="35"/>
                     <ColumnDefinition Width="35"/>
@@ -155,7 +164,7 @@
                   <units:RiotSkinTierButton Count="16" Style="{StaticResource EpicTierStyle}"/>
                 </Grid>
                 <Border Style="{StaticResource SeparatorBorderStyle}"/>
-                <Grid Grid.Row="1" Style="{StaticResource ContentGridStyle}">
+                <Grid Style="{StaticResource ContentGridStyle}">
                   <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="35"/>
                     <ColumnDefinition Width="35"/>
