--- a/src/Leagueoflegends.Support/Themes/Units/RiotChampSummary.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotChampSummary.xaml
@@ -2,7 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
-  
+
+  <x:String x:Key="SummaryGeometry">M73.479167,6.4879167 L73.42115,83.273088 72.912406,84.002032 C70.050467,84.892122 67.912185,87.424602 67.60015,90.496932 L67.599357,90.512622 6.5652928,90.512622 6.5645002,90.496932 C6.2264661,87.168582 3.7451176,84.473782 0.52231627,83.814342 L0.50000002,83.376928 0.52083335,7.7738529 0.55016022,7.5572561 C3.2771481,6.9992703 5.4732712,4.9840263 6.2892464,2.3607517 L6.4277128,0.67162255 66.625,0.5 66.737466,1.3009875 C66.664269,4.4888962 70.108169,7.1286855 73.39635,6.9803701</x:String>
+  <SolidColorBrush x:Key="SummaryBackgroundBrush" Color="#0A0908"/>
+
   <!-- TODO: Use this brush for text when Uno Platform supports gradients on TextBlock -->
   <LinearGradientBrush x:Key="CountGradient" StartPoint="0.5, 0" EndPoint="0.5, 1">
     <GradientStop Color="#CBB785" Offset="0.0" />
@@ -20,8 +23,61 @@
     <GradientStop Color="#00000000" Offset="1.0" />
   </LinearGradientBrush>
 
+  <Style x:Key="SummaryPathStyle" TargetType="Path">
+    <Setter Property="Fill" Value="{StaticResource SummaryBackgroundBrush}"/>
+    <Setter Property="Data" Value="{StaticResource SummaryGeometry}"/>
+    <Setter Property="Stroke" Value="{StaticResource BorderGradient}"/>
+    <Setter Property="StrokeThickness" Value="2"/>
+  </Style>
+
+  <Style x:Key="ProficiencyContentStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#CBB785"/>
+    <Setter Property="FontSize" Value="40"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="ProficiencyTextStyle" TargetType="TextBlock">
+    <Setter Property="FontSize" Value="11"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="AchieveCountStyle" TargetType="TextBlock">
+    <Setter Property="Foreground" Value="#CBB785"/>
+    <Setter Property="FontSize" Value="40"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="AchieveTextStyle" TargetType="TextBlock">
+    <Setter Property="FontSize" Value="11"/>
+    <Setter Property="Foreground" Value="#A09B8C"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="CountOverlayStyle" TargetType="Border">
+    <Setter Property="Background" Value="{StaticResource OverlayGradient}"/>
+    <Setter Property="Width" Value="100"/>
+    <Setter Property="Height" Value="50"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="CountStackStyle" TargetType="StackPanel">
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="CountGridStyle" TargetType="Grid">
+    <Setter Property="Margin" Value="0 0 0 5"/>
+  </Style>
+
+  <Style x:Key="ViewboxStyle" TargetType="Viewbox">
+    <Setter Property="Width" Value="200"/>
+    <Setter Property="Height" Value="200"/>
+  </Style>
+
   <Style TargetType="units:RiotChampSummary">
-    <Setter Property="Background" Value="#0A0908"/>
     <Setter Property="VerticalAlignment" Value="Top"/>
     <Setter Property="Template">
       <Setter.Value>
@@ -31,54 +87,20 @@
               <RowDefinition Height="Auto"/>
               <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Viewbox Width="200" Height="200" Grid.Row="0">
-              <Path
-                Data="M73.479167,6.4879167 L73.42115,83.273088 72.912406,84.002032 C70.050467,84.892122 67.912185,87.424602 67.60015,90.496932 L67.599357,90.512622 6.5652928,90.512622 6.5645002,90.496932 C6.2264661,87.168582 3.7451176,84.473782 0.52231627,83.814342 L0.50000002,83.376928 0.52083335,7.7738529 0.55016022,7.5572561 C3.2771481,6.9992703 5.4732712,4.9840263 6.2892464,2.3607517 L6.4277128,0.67162255 66.625,0.5 66.737466,1.3009875 C66.664269,4.4888962 70.108169,7.1286855 73.39635,6.9803701" 
-                Stroke="{StaticResource BorderGradient}"
-                Fill="{TemplateBinding Background}"
-                StrokeThickness="2"/>
+            <Viewbox Style="{StaticResource ViewboxStyle}">
+              <Path Style="{StaticResource SummaryPathStyle}"/>
             </Viewbox>
-            <StackPanel Grid.Row="0" VerticalAlignment="Center">
-              <StackPanel Margin="0 0 0 5">
-                <Grid>
-                  <TextBlock
-                    Text="{Binding Proficiency}" 
-                    Foreground="#CBB785"
-                    FontSize="40"
-                    FontWeight="Bold"
-                    HorizontalAlignment="Center"/>
-                  <Border
-                    Background="{StaticResource OverlayGradient}"
-                    Width="100" Height="50"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
-                </Grid>
-                <TextBlock
-                  FontSize="11"
-                  Text="Total Proficiency" 
-                  Foreground="#A09B8C"
-                  HorizontalAlignment="Center"/>
-              </StackPanel>
-              <StackPanel Margin="0 5 0 0">
-                <Grid>
-                  <TextBlock
-                    Text="{Binding Achieve}" 
-                    Foreground="#CBB785"
-                    FontSize="40"
-                    FontWeight="Bold"
-                    HorizontalAlignment="Center"/>
-                  <Border
-                    Background="{StaticResource OverlayGradient}"
-                    Width="100" Height="50"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"/>
-                </Grid>
-                <TextBlock
-                  FontSize="11"
-                  Text="Achievements" 
-                  Foreground="#A09B8C"
-                  HorizontalAlignment="Center"/>
-              </StackPanel>
+            <StackPanel Style="{StaticResource CountStackStyle}">
+              <Grid Style="{StaticResource CountGridStyle}">
+                <TextBlock Style="{StaticResource ProficiencyContentStyle}" Text="{Binding Proficiency}"/>
+                <Border Style="{StaticResource CountOverlayStyle}"/>
+              </Grid>
+              <TextBlock Style="{StaticResource ProficiencyTextStyle}" Text="Total Proficiency"/>
+              <Grid Style="{StaticResource CountGridStyle}">
+                <TextBlock Style="{StaticResource AchieveCountStyle}" Text="{Binding Achieve}"/>
+                <Border Style="{StaticResource CountOverlayStyle}"/>
+              </Grid>
+              <TextBlock Style="{StaticResource AchieveTextStyle}" Text="Achievements"/>
             </StackPanel>
           </Grid>
         </ControlTemplate>
