--- a/src/Leagueoflegends.Support/Themes/Units/RiotMatchHistoryListBoxItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotMatchHistoryListBoxItem.xaml
@@ -5,30 +5,29 @@
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
   <!-- Converters -->
-  <cnvts:ItemNameToImageConverter x:Key="ItemNameToImageConverter"/>
-  <cnvts:ChampionNameToThumbnailConverter x:Key="ChampionNameToThumbnailConverter"/>
   <cnvts:MatchResultToColorConverter x:Key="MatchResultToColorConverter"/>
-  <cnvts:SpellNameToImageConverter x:Key="SpellNameToImageConverter"/>
   <cnvts:NumberFormatConverter x:Key="NumberFormatConverter"/>
 
   <!-- Brush resources -->
-  <LinearGradientBrush x:Key="LeftBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
-    <GradientStop Color="#69491F" Offset="0"/>
-    <GradientStop Color="#563D19" Offset="0.5"/>
-    <GradientStop Color="#4A3616" Offset="1"/>
+  <LinearGradientBrush x:Key="PointerOverLeftBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
+    <GradientStop Color="#C89B3C" Offset="0"/>
+    <GradientStop Color="#785A28" Offset="1"/>
   </LinearGradientBrush>
 
-  <LinearGradientBrush x:Key="TopBorderBrush" StartPoint="0,0.5" EndPoint="1,0.5">
-    <GradientStop Color="#67471E" Offset="0"/>
-    <GradientStop Color="#EBC486" Offset="0.3"/>
-    <GradientStop Color="#67471E" Offset="0.5"/>
+  <LinearGradientBrush x:Key="SelectedLeftBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
+    <GradientStop Color="#F0E6D2" Offset="0"/>
+    <GradientStop Color="#C8AA6E" Offset="1"/>
+  </LinearGradientBrush>
+
+  <LinearGradientBrush x:Key="PointerOverTopBorderBrush" StartPoint="0,0.5" EndPoint="1,0.5">
+    <GradientStop Color="#C89B3C" Offset="0"/>
+    <GradientStop Color="#785A28" Offset="0.5"/>
     <GradientStop Color="Transparent" Offset="1"/>
   </LinearGradientBrush>
 
-  <LinearGradientBrush x:Key="BottomBorderBrush" StartPoint="0,0.5" EndPoint="1,0.5">
-    <GradientStop Color="#4A3616" Offset="0"/>
-    <GradientStop Color="#EBC486" Offset="0.3"/>
-    <GradientStop Color="#67471E" Offset="0.5"/>
+  <LinearGradientBrush x:Key="SelectedTopBorderBrush" StartPoint="0,0.5" EndPoint="1,0.5">
+    <GradientStop Color="#F0E6D2" Offset="0"/>
+    <GradientStop Color="#C8AA6E" Offset="0.5"/>
     <GradientStop Color="Transparent" Offset="1"/>
   </LinearGradientBrush>
 
@@ -36,6 +35,14 @@
   <Style x:Key="BaseTextBlockStyle" TargetType="TextBlock">
     <Setter Property="FontSize" Value="12"/>
     <Setter Property="Foreground" Value="#A09B8C"/>
+  </Style>
+  
+  <Style x:Key="DurationTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
+    <Setter Property="Foreground" Value="#CCFFFFFF"/>
+  </Style>
+
+  <Style x:Key="DateTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
+    <Setter Property="Margin" Value="6 0 0 0"/>
   </Style>
 
   <Style x:Key="GoldTextBlockStyle" TargetType="TextBlock" BasedOn="{StaticResource BaseTextBlockStyle}">
@@ -49,30 +56,59 @@
     <Setter Property="HorizontalAlignment" Value="Center"/>
   </Style>
 
-  <Style x:Key="ItemBorderStyle" TargetType="Border">
-    <Setter Property="Height" Value="35"/>
-    <Setter Property="Width" Value="35"/>
-    <Setter Property="BorderThickness" Value="1,1,1,1"/>
-    <Setter Property="BorderBrush" Value="#443114"/>
-    <Setter Property="Margin" Value="0 0 2 0"/>
+  <Style x:Key="MainBorderStyle" TargetType="Border">
+    <Setter Property="Background" Value="#55000000"/>
+    <Setter Property="BorderThickness" Value="0,0,0,1"/>
+    <Setter Property="BorderBrush" Value="#22201C"/>
+    <Setter Property="Margin" Value="0,0,0,0"/>
+    <Setter Property="Padding" Value="40,10,0,10"/>
   </Style>
 
-  <Style x:Key="SpellBorderStyle" TargetType="Border">
-    <Setter Property="Height" Value="22"/>
-    <Setter Property="BorderBrush" Value="#463714"/>
-    <Setter Property="BorderThickness" Value="1"/>
+  <Style x:Key="SpellStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+    <Setter Property="Margin" Value="0,8,0,0"/>
   </Style>
 
-  <Style x:Key="ChampionLevelBorderStyle" TargetType="Border">
-    <Setter Property="HorizontalAlignment" Value="Right"/>
-    <Setter Property="VerticalAlignment" Value="Bottom"/>
-    <Setter Property="Height" Value="22"/>
-    <Setter Property="Width" Value="22"/>
-    <Setter Property="CornerRadius" Value="20"/>
-    <Setter Property="BorderThickness" Value="1"/>
-    <Setter Property="Background" Value="#010A13"/>
-    <Setter Property="BorderBrush" Value="#C6993B"/>
-    <Setter Property="Margin" Value="0,0,-5,5"/>
+  <Style x:Key="ItemStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Orientation" Value="Horizontal"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
+    <Setter Property="Margin" Value="0 10 0 8"/>
+  </Style>
+
+  <Style x:Key="GameResultTextStyle" TargetType="TextBlock">
+    <Setter Property="Typography.Capitals" Value="AllSmallCaps"/>
+    <Setter Property="Opacity" Value="0.7"/>
+    <Setter Property="FontSize" Value="15"/>
+  </Style>
+
+  <Style x:Key="GameInfoStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Margin" Value="20,0,0,0"/>
+    <Setter Property="Width" Value="156"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
+  </Style>
+
+  <Style x:Key="LeftBorderStyle" TargetType="Border">
+    <Setter Property="BorderThickness" Value="3,0,0,0"/>
+    <Setter Property="BorderBrush" Value="Transparent"/>
+    <Setter Property="Height" Value="90"/>
+  </Style>
+
+  <Style x:Key="TopBorderStyle" TargetType="Border">
+    <Setter Property="BorderThickness" Value="0,1,0,0"/>
+    <Setter Property="BorderBrush" Value="Transparent"/>
+    <Setter Property="Margin" Value="-1,0,0,0"/>
+  </Style>
+
+  <Style x:Key="BottomBorderStyle" TargetType="Border">
+    <Setter Property="BorderThickness" Value="0,0,0,1"/>
+    <Setter Property="BorderBrush" Value="Transparent"/>
+    <Setter Property="Margin" Value="-1,0,0,0"/>
+  </Style>
+
+  <Style x:Key="DetailInfoStackPanelStyle" TargetType="StackPanel">
+    <Setter Property="Margin" Value="22 18 30 0"/>
+    <Setter Property="VerticalAlignment" Value="Top"/>
   </Style>
 
   <!-- MatchHistoryListBoxItem Style -->
@@ -86,117 +122,66 @@
                 <VisualState x:Name="Normal" />
                 <VisualState x:Name="PointerOver">
                   <VisualState.Setters>
-                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource LeftBorderBrush}" />
-                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource TopBorderBrush}" />
-                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource BottomBorderBrush}" />
+                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource PointerOverLeftBorderBrush}" />
+                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource PointerOverTopBorderBrush}" />
+                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource PointerOverTopBorderBrush}" />
                     <Setter Target="MainBorder.Background" Value="#77000000" />
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Pressed">
                   <VisualState.Setters>
-                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource LeftBorderBrush}" />
-                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource TopBorderBrush}" />
-                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource BottomBorderBrush}" />
+                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource PointerOverLeftBorderBrush}" />
+                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource PointerOverTopBorderBrush}" />
+                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource PointerOverTopBorderBrush}" />
                     <Setter Target="MainBorder.Background" Value="#AA000000" />
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Selected">
                   <VisualState.Setters>
-                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource LeftBorderBrush}" />
-                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource TopBorderBrush}" />
-                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource BottomBorderBrush}" />
+                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource SelectedLeftBorderBrush}" />
+                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource SelectedTopBorderBrush}" />
+                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource SelectedTopBorderBrush}" />
                     <Setter Target="MainBorder.Background" Value="#CC000000" />
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="PointerOverSelected">
                   <VisualState.Setters>
-                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource LeftBorderBrush}" />
-                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource TopBorderBrush}" />
-                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource BottomBorderBrush}" />
+                    <Setter Target="LeftBorder.BorderBrush" Value="{StaticResource SelectedLeftBorderBrush}" />
+                    <Setter Target="TopBorder.BorderBrush" Value="{StaticResource SelectedTopBorderBrush}" />
+                    <Setter Target="BottomBorder.BorderBrush" Value="{StaticResource SelectedTopBorderBrush}" />
                     <Setter Target="MainBorder.Background" Value="#AA000000" />
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
 
-            <Border x:Name="MainBorder"
-              Background="#55000000"
-              BorderThickness="0,0,0,1"
-              BorderBrush="#22201C"
-              Margin="0,0,0,0"
-              Padding="40,10,0,10">
+            <Border x:Name="MainBorder" Style="{StaticResource MainBorderStyle}">
               <StackPanel Orientation="Horizontal">
-                <!-- Champion and Level -->
-                <Grid Width="60" Height="60">
-                  <Ellipse Stroke="#8D7B54" StrokeThickness="2">
-                    <Ellipse.Fill>
-                      <ImageBrush ImageSource="{Binding Champion, Converter={StaticResource ChampionNameToThumbnailConverter}}" Stretch="UniformToFill"/>
-                    </Ellipse.Fill>
-                  </Ellipse>
-                  <Border Style="{StaticResource ChampionLevelBorderStyle}">
-                    <TextBlock
-                      Text="{Binding ChampionLevel}"
-                      Foreground="#938F82"
-                      FontSize="12"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"/>
-                  </Border>
-                </Grid>
+                <units:RiotChampionAvatar Champion="{Binding Champion}" Level="{Binding ChampionLevel}"/>
 
                 <!-- Result and Game Mode -->
-                <StackPanel
-                  Margin="20,0,0,0"
-                  Width="156"
-                  VerticalAlignment="Top">
+                <StackPanel Style="{StaticResource GameInfoStackPanelStyle}">
                   <TextBlock
+                    Style="{StaticResource GameResultTextStyle}"
                     Foreground="{Binding Result, Converter={StaticResource MatchResultToColorConverter}}"
-                    Text="{Binding Result}"
-                    Typography.Capitals="AllSmallCaps"
-                    Opacity="0.7"
-                    FontSize="15"/>
-                  <TextBlock
-                    Text="{Binding GameMode}"
-                    Style="{StaticResource BaseTextBlockStyle}"/>
-                  <StackPanel
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Left"
-                    Margin="0,8,0,0">
-                    <Border Style="{StaticResource SpellBorderStyle}">
-                      <Image Source="{Binding SummonerSpell1, Converter={StaticResource SpellNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource SpellBorderStyle}" Margin="2 0 0 0">
-                      <Image Source="{Binding SummonerSpell2, Converter={StaticResource SpellNameToImageConverter}}"/>
-                    </Border>
+                    Text="{Binding Result}"/>
+                  <TextBlock Style="{StaticResource BaseTextBlockStyle}" Text="{Binding GameMode}"/>
+                  <StackPanel Style="{StaticResource SpellStackPanelStyle}">
+                    <units:RiotSpellBadge SpellName="{Binding SummonerSpell1}" Margin="0 0 2 0"/>
+                    <units:RiotSpellBadge SpellName="{Binding SummonerSpell2}" Margin="0 0 2 0"/>
                   </StackPanel>
                 </StackPanel>
 
                 <!-- Items and Stats -->
                 <StackPanel>
-                  <StackPanel
-                    Orientation="Horizontal"
-                    VerticalAlignment="Top"
-                    Margin="0 10 0 8">
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item1, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item2, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item3, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item4, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item5, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding Item6, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
-                    <Border Style="{StaticResource ItemBorderStyle}">
-                      <Image Source="{Binding WardItem, Converter={StaticResource ItemNameToImageConverter}}"/>
-                    </Border>
+                  <StackPanel Style="{StaticResource ItemStackPanelStyle}">
+                    <units:RiotItemBadge ItemName="{Binding Item1}"/>
+                    <units:RiotItemBadge ItemName="{Binding Item2}"/>
+                    <units:RiotItemBadge ItemName="{Binding Item3}"/>
+                    <units:RiotItemBadge ItemName="{Binding Item4}"/>
+                    <units:RiotItemBadge ItemName="{Binding Item5}"/>
+                    <units:RiotItemBadge ItemName="{Binding Item6}"/>
+                    <units:RiotItemBadge ItemName="{Binding WardItem}"/>
                   </StackPanel>
                   <Grid>
                     <TextBlock Style="{StaticResource BaseTextBlockStyle}">
@@ -212,19 +197,19 @@
                 </StackPanel>
 
                 <!-- Game Info -->
-                <StackPanel Margin="22,10,0,0" VerticalAlignment="Top">
+                <StackPanel Style="{StaticResource DetailInfoStackPanelStyle}">
                   <TextBlock Text="{Binding MapType}" Style="{StaticResource BaseTextBlockStyle}"/>
-                  <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
-                    <TextBlock Text="{Binding Duration}" Style="{StaticResource BaseTextBlockStyle}" Foreground="#CCFFFFFF"/>
-                    <TextBlock Text="{Binding Date}" Style="{StaticResource BaseTextBlockStyle}" Margin="6,0,0,0"/>
+                  <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding Duration}" Style="{StaticResource DurationTextBlockStyle}"/>
+                    <TextBlock Text="{Binding Date}" Style="{StaticResource DateTextBlockStyle}"/>
                   </StackPanel>
                 </StackPanel>
                 <units:RiotCircleIconButton/>
               </StackPanel>
             </Border>
-            <Border x:Name="LeftBorder" BorderThickness="3,0,0,0" BorderBrush="Transparent" Height="90"/>
-            <Border x:Name="TopBorder" BorderThickness="0,1,0,0" BorderBrush="Transparent" Margin="-1,0,0,0"/>
-            <Border x:Name="BottomBorder" BorderThickness="0,0,0,1" BorderBrush="Transparent" Margin="-1,0,0,0"/>
+            <Border x:Name="LeftBorder" Style="{StaticResource LeftBorderStyle}"/>
+            <Border x:Name="TopBorder" Style="{StaticResource TopBorderStyle}"/>
+            <Border x:Name="BottomBorder" Style="{StaticResource BottomBorderStyle}"/>
           </Grid>
         </ControlTemplate>
       </Setter.Value>
