--- a/src/Leagueoflegends.Support/Themes/Units/RiotPlayedChampListBox.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotPlayedChampListBox.xaml
@@ -1,17 +1,7 @@
 ﻿<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:cnvts="using:Leagueoflegends.Support.Local.Converters"
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
-  
-  <cnvts:PercentToBadgeConverter x:Key="PercentToBadgeConverter"/>
-  <cnvts:ChampionNameToThumbnailConverter x:Key="ChampionNameToThumbnailConverter"/>
-  
-  <LinearGradientBrush x:Key="PercentForegroundBrush" StartPoint="0.5,0" EndPoint="0.5,1">
-    <GradientStop Color="#CAB37E" Offset="0.0"/>
-    <GradientStop Color="#B2955B" Offset="0.5"/>
-    <GradientStop Color="#362A17" Offset="1"/>
-  </LinearGradientBrush>
 
   <Style TargetType="Border" x:Key="SeparatorBorderStyle">
     <Setter Property="Background" Value="Transparent"/>
@@ -20,58 +10,18 @@
     <Setter Property="Margin" Value="0,22,0,22"/>
   </Style>
 
-  <Style TargetType="TextBlock" x:Key="PlayedChampionsHeaderStyle">
+  <Style TargetType="TextBlock" x:Key="HeaderStyle">
     <Setter Property="Foreground" Value="#F0E2BE"/>
     <Setter Property="FontSize" Value="16"/>
     <Setter Property="Margin" Value="30,0,30,20"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="Text" Value="RECENTLY PLAYED CHAMPIONS"/>
   </Style>
 
-  <Style TargetType="TextBlock" x:Key="PlayRatioTextStyle">
+  <Style TargetType="TextBlock" x:Key="RatioStyle">
     <Setter Property="Margin" Value="0,12,0,0"/>
     <Setter Property="Foreground" Value="#A09B8C"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
-  </Style>
-
-  <Style TargetType="units:RiotPlayedChampListBoxItem">
-    <Setter Property="Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="units:RiotPlayedChampListBoxItem">
-          <StackPanel>
-            <Border
-              BorderThickness="1"
-              BorderBrush="#33FFFFFF"
-              Margin="4 4 4 1">
-              <Image
-                Source="{Binding Champion, Converter={StaticResource ChampionNameToThumbnailConverter}}"
-                Width="68"
-                Height="68"/>
-            </Border>
-            <Grid Margin="6,-1,6,0">
-              <Grid.RowDefinitions>
-                <RowDefinition Height="3*"/>
-                <RowDefinition Height="1*"/>
-              </Grid.RowDefinitions>
-              <Grid>
-                <Image
-                  Source="{Binding Percent, Converter={StaticResource PercentToBadgeConverter}}"
-                  Stretch="Uniform"
-                  Margin="0"
-                  Width="48"/>
-              </Grid>
-            </Grid>
-            <TextBlock
-              Margin="0,12,0,0"
-              Foreground="#B2955B"
-              FontWeight="Bold"
-              FontSize="17"
-              HorizontalAlignment="Center">
-              <Run Text="{Binding Percent}"/><Run Text="%"/>
-            </TextBlock>
-          </StackPanel>
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
   </Style>
 
   <Style TargetType="units:RiotPlayedChampListBox">
@@ -91,12 +41,10 @@
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotPlayedChampListBox">
           <StackPanel>
-            <TextBlock Style="{StaticResource PlayedChampionsHeaderStyle}" Text="RECENTLY PLAYED CHAMPIONS"/>
-            <StackPanel Background="Transparent" Padding="0 0 0 0">
-              <ItemsPresenter/>
-              <TextBlock Style="{StaticResource PlayRatioTextStyle}" Text="$ of games played"/>
-              <Border Style="{StaticResource SeparatorBorderStyle}"/>
-            </StackPanel>
+            <TextBlock Style="{StaticResource HeaderStyle}" Text="RECENTLY PLAYED CHAMPIONS"/>
+            <ItemsPresenter/>
+            <TextBlock Style="{StaticResource RatioStyle}" Text="$ of games played"/>
+            <Border Style="{StaticResource SeparatorBorderStyle}"/>
           </StackPanel>
         </ControlTemplate>
       </Setter.Value>
